--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "ipykernel (>=6.29.5,<7.0.0)",
     "selenium (>=4.29.0,<5.0.0)",
     "beautifulsoup4 (>=4.13.3,<5.0.0)",
-    "webdriver-manager (>=4.0.2,<5.0.0)"
+    "webdriver-manager (>=4.0.2,<5.0.0)",
+    "jupyter (>=1.1.1,<2.0.0)"
 ]
 
 [tool.poetry]
