--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "selenium (>=4.29.0,<5.0.0)",
     "beautifulsoup4 (>=4.13.3,<5.0.0)",
     "webdriver-manager (>=4.0.2,<5.0.0)",
-    "jupyter (>=1.1.1,<2.0.0)"
+    "jupyter (>=1.1.1,<2.0.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)"
 ]
 
 [tool.poetry]
