--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "beautifulsoup4 (>=4.13.3,<5.0.0)",
     "webdriver-manager (>=4.0.2,<5.0.0)",
     "jupyter (>=1.1.1,<2.0.0)",
-    "python-dotenv (>=1.0.1,<2.0.0)"
+    "python-dotenv (>=1.0.1,<2.0.0)",
+    "streamlit (>=1.43.0,<2.0.0)"
 ]
 
 [tool.poetry]
